--- a/Inicio.html
+++ b/Inicio.html
@@ -16,6 +16,19 @@
                     <br><br>
                     <input type="submit" value="Ingresar" name="bt1" >
                 </form>
-            </fieldset>
+        </fieldset>
+        <h4>¿Aún no tienes cuenta?<br> ¡Créala aquí!</h4>
+        <fieldset>
+            <legend>Crea tu cuenta</legend>
+            <form action="index.php" method="POST">
+                <label>Nombre de Usuario</label>
+                <input type="text" name="usuario" required>
+                <br><br>
+                <label>Contraseña</label>
+                <input type="text" name="contra" required>
+                <br><br>
+                <input type="submit" value="Crear" name="bt2" >
+            </form>
+        </fieldset>
     </body>
 </html>
