Arreglar algunos errores

--- a/Registro.html
+++ b/Registro.html
@@ -15,7 +15,7 @@
 				<tr>
 					<td>
 						<a href="Menu.php">
-							<img src="Logo.png" style="border-radius: 15px;"  height="100"/>
+							<img src="Images/Logo.png" style="border-radius: 15px;"  height="100"/>
 						</a>
 					</td>
 				</tr>
